Extra folder gitignore (venv, qml project user files)

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,7 @@ fabric.properties
 [Ss]cripts
 pyvenv.cfg
 .venv
+venv
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,venv
