--- a/.gitignore
+++ b/.gitignore
@@ -83,9 +83,11 @@ fabric.properties
 ### PyCharm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
+.idea/*.iml
+.idea/modules.xml
+.idea/misc.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/vcs.xml
 # *.ipr
 
 # Sonarlint plugin
