requirements.txt: remove extra dependencies, add mypy

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,8 @@ PySide6==6.6.3
 PySide6-Essentials==6.6.3
 PySide6-Addons==6.6.3
 shiboken6==6.6.3
-numpy
-pandas
 pyqtgraph
 requests
-matplotlib
 desktop-parser
-
+mypy
 
