--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ shiboken6 = "^6.7.0"
 pyqtgraph = "^0.13.6"
 requests = "^2.31.0"
 desktop-parser = "^0.1.1"
+pygame = "^2.5.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.9.0"
