--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-steam-api = "^2.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.9.0"
+setuptools = "^70.0.0"
 
 [tool.poetry.scripts]
 main = 'ingame.main:main'
